--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = cava_project
+name = rca_data_tools
 maintainer = Landung Setiawan
 maintainer_email = landungs@uw.edu
 description = A CAVA template for a developing a python project.
