Update package info

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = rca_data_tools
-maintainer = Landung Setiawan
-maintainer_email = landungs@uw.edu
-description = A CAVA template for a developing a python project.
+maintainer = RCA Data Team
+maintainer_email = ''
+description = Utilities for working with Regional Cabled Array Data.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/cormorack/python-project-template
+url = https://github.com/OOI-CabledArray/rca-data-tools
 license = MIT
 classifiers =
     Development Status :: 3 - Alpha
@@ -18,8 +18,8 @@ classifiers =
     Programming Language :: Python :: 3.9
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: Scientific/Engineering
-author = Landung Setiawan
-author_email = landungs@uw.edu
+author = RCA Data Team
+author_email = ''
 platforms = OS Independent
 
 [options]
@@ -27,8 +27,19 @@ packages = find:
 platforms = any
 include_package_data = True
 install_requires =
-    requests
+    cmocean
+    fsspec
+    loguru
+    matplotlib
+    netcdf4
+    numpy
     pandas
+    pathlib
+    requests
+    s3fs
+    scipy
+    xarray
+    zarr
 python_requires = >=3.7
 setup_requires =
     setuptools_scm
