Add qaqc dashboard scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,3 +71,7 @@ all =
     %(test)s
     %(lint)s
     %(docs)s
+
+[options.entry_points]
+console_scripts =
+    create_dashboard = rca_data_tools.qaqc.cli:main
