Add script for generating HITL notes from gsheet

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ include_package_data = True
 install_requires =
     cmocean
     fsspec
+    gspread
     loguru
     matplotlib
     netcdf4
@@ -75,4 +76,5 @@ all =
 
 [options.entry_points]
 console_scripts =
-    create_dashboard = rca_data_tools.qaqc.cli:main
+    create_dashboard = rca_data_tools.qaqc.plots:main
+    generate_hitl_tables = rca_data_tools.qaqc.notes:main
