Add dask and numba as package dependencies.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,11 +28,13 @@ platforms = any
 include_package_data = True
 install_requires =
     cmocean
+    dask
     fsspec
     gspread
     loguru
     matplotlib
     netcdf4
+    numba
     numpy
     pandas
     pathlib
