Add qaqc_pipeline cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,3 +80,4 @@ all =
 console_scripts =
     create_dashboard = rca_data_tools.qaqc.plots:main
     generate_hitl_tables = rca_data_tools.qaqc.notes:main
+    qaqc_pipeline = rca_data_tools.qaqc.pipeline:main
