--- a/.github/workflows/register_pipeline.yaml
+++ b/.github/workflows/register_pipeline.yaml
@@ -6,9 +6,6 @@ on:
       - "main"
   workflow_dispatch:
 
-env:
-  PYTHON_VERSION: 3.8
-
 jobs:
   register-pipeline:
     name: Register Pipeline
@@ -20,10 +17,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.GH_PAT }}
-      - name: Setup python
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
@@ -32,8 +25,10 @@ jobs:
       - name: Setup miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
           auto-activate-base: false
+          activate-environment: rca-data-env
+          channel-priority: strict
+          environment-file: .ci/environment.yaml
           use-only-tar-bz2: true
       - name: Print conda env
         run: |
