--- a/rca_data_tools/qaqc/docker/Dockerfile
+++ b/rca_data_tools/qaqc/docker/Dockerfile
@@ -4,6 +4,6 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update -y && \
     apt-get install -y tzdata
 USER ${NB_USER}
-RUN mamba install -n notebook -c conda-forge --yes fastparquet
+RUN mamba install -n notebook -c conda-forge --yes fastparquet "prefect<1.0"
 ENV PATH=/srv/conda/envs/notebook/bin:$PATH
 ENV JUPYTERHUB_USER=rca-qaqc
