--- a/rca_data_tools/qaqc/docker/Dockerfile
+++ b/rca_data_tools/qaqc/docker/Dockerfile
@@ -6,11 +6,12 @@ RUN apt-get update -y && \
 USER ${NB_USER}
 RUN mamba install -n notebook -c conda-forge --yes \
       fastparquet \
+      python=3.8 \
       "prefect<1.0" \
       "pycurl<7.45" \
       "setuptools<59" \
       "wheel>=0.29.0"
 ENV PATH=/srv/conda/envs/notebook/bin:$PATH
 ENV JUPYTERHUB_USER=rca-qaqc
-RUN conda info
-RUN conda list
+# List all the packages in notebook env
+RUN conda list -n notebook
