--- a/setup.cfg
+++ b/setup.cfg
@@ -69,8 +69,13 @@ lint =
     pre-commit
     pylint
 docs =
-    sphinx
+    sphinx_rtd_theme
     sphinx-automodapi
+    sphinx-panels
+    sphinxcontrib-mermaid
+    jupyter-book
+    numpydoc
+    docutils<0.18
 all =
     %(test)s
     %(lint)s
