--- a/.github/workflows/register_pipeline.yaml
+++ b/.github/workflows/register_pipeline.yaml
@@ -48,11 +48,11 @@ jobs:
           # Set backend of prefect to server
           prefect backend server
           echo "[server]" >> ~/.prefect/backend.toml
-          echo "endpoint = ${{secrets.AWS_PREFECT_SERVER}}" >> ~/.prefect/backend.toml
+          echo "endpoint = '${{secrets.AWS_PREFECT_SERVER}}'" >> ~/.prefect/backend.toml
  
           echo "[server]" >> ~/.prefect/config.toml
           echo "[server_ui]" >> ~/.prefect/config.toml
-          echo "endpoint = ${{secrets.AWS_PREFECT_SERVER}}" >> ~/.prefect/config.toml
+          echo "endpoint = '${{secrets.AWS_PREFECT_SERVER}}'" >> ~/.prefect/config.toml
 
           # Run flow
           qaqc_pipeline --register --cloud --s3-sync
