pin xarray at 2023.1.0 due to indexing error

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires =
     requests
     s3fs
     scipy
-    xarray
+    xarray==2023.1.0
     zarr
 python_requires = >=3.7
 setup_requires =
