warn about deprecated docker file

--- a/rca_data_tools/qaqc/docker/Dockerfile
+++ b/rca_data_tools/qaqc/docker/Dockerfile
@@ -1,3 +1,4 @@
+# TODO DEPRECATED? DELETE?
 # Dockerfile for building prefect pipeline
 # this file will be used when the pipeline image is being built
 # it is based on the `pangeo-notebook` image,
