add 2vcpu 16gb deployment and temporarily run all on this deployment to see where we can save compute

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -44,3 +44,16 @@ deployments:
       cpu: 8192
       memory: 49152
   schedule:
+- name: 2vcpu_16gb
+  version:
+  tags: []
+  description:
+  entrypoint: rca_data_tools/qaqc/flow.py:qaqc_pipeline_flow
+  parameters: {}
+  work_pool:
+    name: QAQC-default-workpool
+    work_queue_name:
+    job_variables:
+      cpu: 2048
+      memory: 16384
+  schedule:
